tests/ui/resolve/impl-items-vis-unresolved.stderr
error[E0433]: too many leading `super` keywords within `crate`
  --> $DIR/impl-items-vis-unresolved.rs:21:13
   |
LL |         pub(super) fn new() {}
   |             ^^^^^ this `super` would go above the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
